@@ -15,22 +15,31 @@ public class NotaCartellaService {
     }
 
     public void spostaNotaInCartella(String notaId, String cartellaId, String proprietario) {
-        if (notaId == null || notaId.isBlank()) throw new IllegalArgumentException("notaId non valido");
-        if (proprietario == null || proprietario.isBlank()) throw new IllegalArgumentException("proprietario non valido");
+
+        if (notaId == null || notaId.trim().isEmpty())
+            throw new IllegalArgumentException("notaId non valido");
+
+        if (proprietario == null || proprietario.trim().isEmpty())
+            throw new IllegalArgumentException("proprietario non valido");
 
         Nota nota = noteRepo.get(notaId);
-        if (nota == null) throw new IllegalArgumentException("Nota inesistente");
+        if (nota == null)
+            throw new IllegalArgumentException("Nota inesistente");
+
         if (nota.getProprietario() == null || !nota.getProprietario().equals(proprietario)) {
             throw new IllegalArgumentException("Nota non appartenente all'utente");
         }
 
-        // Gestione Root: se cartellaId è null o "ROOT", la nota torna libera
-        if (cartellaId == null || cartellaId.equals("ROOT") || cartellaId.isBlank()) {
+        // Gestione Root: se cartellaId è null / "ROOT" / vuota -> la nota torna libera
+        if (cartellaId == null || "ROOT".equals(cartellaId) || cartellaId.trim().isEmpty()) {
             nota.setIdCartella(null);
         } else {
             Cartella cartella = cartelleRepo.get(cartellaId);
-            if (cartella == null) throw new IllegalArgumentException("Cartella inesistente");
-            if (!cartella.getProprietario().equals(proprietario)) throw new IllegalArgumentException("Cartella non appartenente all'utente");
+            if (cartella == null)
+                throw new IllegalArgumentException("Cartella inesistente");
+
+            if (!cartella.getProprietario().equals(proprietario))
+                throw new IllegalArgumentException("Cartella non appartenente all'utente");
 
             nota.setIdCartella(cartellaId);
         }
@@ -51,19 +60,28 @@ public class NotaCartellaService {
     }
 
     public List<Nota> listaNotePerCartella(String cartellaId, String proprietario) {
-        if (cartellaId == null || cartellaId.isBlank()) throw new IllegalArgumentException("cartellaId non valido");
-        if (proprietario == null || proprietario.isBlank()) throw new IllegalArgumentException("proprietario non valido");
+
+        if (cartellaId == null || cartellaId.trim().isEmpty())
+            throw new IllegalArgumentException("cartellaId non valido");
+
+        if (proprietario == null || proprietario.trim().isEmpty())
+            throw new IllegalArgumentException("proprietario non valido");
 
         Cartella cartella = cartelleRepo.get(cartellaId);
-        if (cartella == null) throw new IllegalArgumentException("Cartella inesistente");
-        if (!cartella.getProprietario().equals(proprietario)) throw new IllegalArgumentException("Cartella non appartenente all'utente");
+        if (cartella == null)
+            throw new IllegalArgumentException("Cartella inesistente");
+
+        if (!cartella.getProprietario().equals(proprietario))
+            throw new IllegalArgumentException("Cartella non appartenente all'utente");
 
         List<Nota> risultato = new ArrayList<>();
+
         for (Nota n : noteRepo.values()) {
             if (proprietario.equals(n.getProprietario()) && cartellaId.equals(n.getIdCartella())) {
                 risultato.add(n);
             }
         }
+
         return risultato;
     }
 }
